# mitzu

./: .gitignore  .readthedocs.yaml  CONTRIBUTION.md  DOCS.md  Makefile  README.md  codecov.yml  pyproject.toml  setup.cfg  test_app.mitzu  test_notebook.ipynb
.github/workflows/: check.yaml  poetry-lock.yaml  release.yaml
dashboard/mitzu_dash/: all_segments.py  app.py  complex_segment.py  event_segment.py  graph.py  helper.py  metrics_config.py  simple_segment.py
databricks_sqlalchemy/sqlalchemy/: __init__.py  compiler.py  datatype.py  dialect.py
docker/: docker-compose.yml  trino_hive_init.sql
docker/conf/: metastore-site.xml
docs/: conf.py  connection.rst  index.rst  project.rst  quickstart.rst  requirements.txt  webapp.rst
example/: docker-compose.yml
examples/: ga4-transform-bigquery.sql
examples/notebook/: mysql_test_project.ipynb  postgres_test_project.ipynb  trino_test_project.ipynb  trino_test_project.mitzu
examples/webapp-docker/: README.md  docker-compose.yml
examples/webapp-docker-compose/: docker-compose.yml
mitzu/: __init__.py  helper.py  model.py  project.py  project_discovery.py  project_serialization.py  serialization.py  titles.py  visualization.py
mitzu/adapters/: adapter_factory.py  athena_adapter.py  databricks_adapter.py  file_adapter.py  generic_adapter.py  helper.py  mysql_adapter.py  postgres_adapter.py  postgresql_adapter.py  slqalchemy_adapter.py  snowflake_adapter.py  sqlalchemy_adapter.py  sqlite_adapter.py  trino_adapter.py
mitzu/common/: helper.py  model.py  serialization.py
mitzu/discovery/: dataset_discovery.py  datasource_discovery.py
mitzu/notebook/: dashboard.py  model_loader.py  titles.py  visualization.py
mitzu/samples/: __init__.py  data_ingestion.py  sample_data_generator.py  test_data_generator.py
mitzu/visualization/: charts.py  common.py  plot.py  tooltips.py  transform_retention.py
mitzu/webapp/: all_segments.py  app.py  authorizer.py  cache.py  complex_segment.py  complex_segment_handler.py  configs.py  dates_selector.py  dependencies.py  event_segment.py  graph.py  graph_handler.py  helper.py  metric_builder.py  metrics_config.py  model.py  navbar.py  notebook.py  offcanvas.py  persistence.py  simple_segment.py  simple_segment_handler.py  storage.py  storage_model.py  toolbar_handler.py  webapp.py
release/: Dockerfile  LocalDockerfile  app.py  requirements.txt
scripts/: convert_and_run_notebook.sh  create_example_project.py  create_test_data.py  wait_for_trino.py
serverless/: samconfig.toml  template.yml
tests/: docker-compose.yml  helper.py
(+136 files in other folders)
