[tool.poetry]
name = "mitzu"
version = "0.1.6"
description = "Product analytics for your notebook"
authors = ["Istvan Meszaros <istvan.meszaros.88@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "^1.3.5"
plotly = "^5.5.0"
SQLAlchemy = "^1.4.31"
pyarrow = "^7.0.0"
fastparquet = "^0.8.0"
sql-formatter = "^0.6.2"

[tool.poetry.dev-dependencies]
mypy = "^0.920"
jupyter = "^1.0.0"
pytest = "^6.2.5"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
