[tool.poetry]
name = "mitzu"
version = "0.1.19"
description = "Product analytics for your notebook"
authors = ["Istvan Meszaros <istvan.meszaros.88@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "~1.3.5"
plotly = "~5.5.0"
sqlalchemy = "~1.4.31"
pyarrow = "~7.0.0"
fastparquet = "~0.8.0"
sql-formatter = "~0.6.2"
retry = "~0.9.2"


# extras
psycopg2 = {version = "~2.9.3", optional=true}
mysql-connector-python = {version = "~8.0.28", optional=true}
sqlalchemy-trino = { version = "~0.4.1", optional=true }

[tool.poetry.extras]
postgres = ["psycopg2"]
mysql= ["mysql-connector-python"]
trino= ["sqlalchemy-trino"]
# Athena can't be here there are dependency conflicts, but it can be installed


[tool.poetry.dev-dependencies]
mypy = "^0.920"
jupyter = "^1.0.0"
pytest = "^6.2.5"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
